--- a/modules/Bienvenida/html/index.html
+++ b/modules/Bienvenida/html/index.html
@@ -1,6 +1,6 @@
     <table width="100%" border="0">
         <tr>
-            <td colspan="2" align="center"><div class="title" height="50"><h1>Sistema Sales Funnel</h1></div></td>
+            <td colspan="2" align="center"><div class="title" height="50"><h1>Sistema de Prospecci&oacute;n de Distribuidores</h1></div></td>
         </tr>
         <tr>
             <td colspan="2" class="content" style="width:100%;" align="center">$buffer_ventas</td>
