Add graphics for reports

--- a/modules/Gerente/html/ciclo_venta.html
+++ b/modules/Gerente/html/ciclo_venta.html
@@ -12,7 +12,7 @@
         <tr>
             <td colspan="3" align="center"><div class="title" height="50"><h1>Gr&aacute;ficos</h1></div><br></td>
         </tr>
-        <tr>
+        <!--<tr>
             <td align="center">Seleccione el a&ntilde;o, del cu&aacute;l desea visualizar el gr&aacute;fico: </td>
             <td>$select_ano</td>
             <td><input type="submit" name="genera_grafico" id="genera_grafico" value="Consultar Gráfico"></td>
@@ -20,7 +20,7 @@
         <tr height="60">
             <td colspan="3" align="center">&nbsp;</td>
         </tr>
-
+-->
         <tr>
             <td colspan="3" class="content" style="width:100%;" align="center">$buffer_ventas</td>
         </tr>
@@ -28,8 +28,8 @@
         <tr>
             <td colspan="3" class="content" style="width:100%;" align="center">$buffer</td>
         </tr>
-        <tr>
-        <td colspan="3" class="content" style="width:100%;" align="center">$buffer_semaforo</td>
+        <!--<tr>
+        <td colspan="3" class="content" style="width:100%;" align="center">$buffer_semaforo</td>-->
         </tr>
     </table>
 </form>
