--- a/admin/Catalogos/html/new.html
+++ b/admin/Catalogos/html/new.html
@@ -48,7 +48,7 @@ function update_fecha_ini(cal)
         <table width="100%" align="center" border="0">
             <tr>
                 <td align="center">
-                    <h1>Creaci&oacute;n de origen</h1>
+                    <h1>Crear nueva fuente</h1>
                 </td>
             </tr>
             <tr>
@@ -57,20 +57,20 @@ function update_fecha_ini(cal)
                     <thead>
                         <tr>
                             <td colspan='3' align="center" class="parrafo">
-                                Favor de Seleccionar el nivel del origen que desee
+                                Favor de Seleccionar el nivel del fuente que desee
                             </td>
                         </tr>
                     </thead>
                     <tr class="row2">
-                        <td>Origen Padre</td>
+                        <td>Fuente Padre</td>
                         <td>$select_origenPadre</td>                         
                     </tr>
                     <tr class="row1" height="40">
-                        <td>Nombre del Origen</td>
+                        <td>Nombre de la Fuente</td>
                         <td><input type='text' name='fuente'  id='fuente' value='' size="35"></td>
                     </tr>
                     <tr>
-                        <td colspan="2" align="center"><input type="button" name="guardar_fuente" id="guardar_fuente" value="Guardar Origen"></td>
+                        <td colspan="2" align="center"><input type="button" name="guardar_fuente" id="guardar_fuente" value="Guardar Fuente"></td>
                     </tr>
                    </table>
                 </td>
