--- a/modules/Campanas/html/index.html
+++ b/modules/Campanas/html/index.html
@@ -3,22 +3,23 @@
     <head>
         <title></title><meta content="">
     </head>
-<body>
-<table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
-  <tbody>
-    <tr>
-      <td colspan="2" rowspan="1">
-      <h1>Prospectos en ciclo de venta</h1>
-      </td>
-    </tr>
-    <tr class="" >
-      <td style="width:15px;"></td>
-      <td style="width:100%;">$tabla_campanas</td>
-    </tr>
-    <tr class="" >
-      <td></td>
-      <td>$paginacion_campanas</td>
-    </tr>
-  </tbody>
-</table>
-</body></html>
+    <body>
+        <table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
+          <tbody>
+            <tr>
+              <td colspan="2" rowspan="1">
+              <h1>Prospectos en ciclo de venta</h1>
+              </td>
+            </tr>
+            <tr class="" >
+              <td style="width:15px;"></td>
+              <td style="width:100%;">$tabla_campanas</td>
+            </tr>
+            <tr class="" >
+              <td></td>
+              <td>$paginacion_campanas</td>
+            </tr>
+          </tbody>
+        </table>
+    </body>
+</html>
