--- a/admin/Contactos/html/cancelar.html
+++ b/admin/Contactos/html/cancelar.html
@@ -67,7 +67,7 @@ $msg
 
 <tr class="row1">
   <td colspan=2>Solo los no asignados&nbsp; &nbsp;<input type="checkbox" name="no_asignados" $no_asignados_checked></td>
-  <td>Distribuidor</td>
+  <td>Proyecto</td>
   <td>$select_groups2</td>
 </tr>
 
