--- a/admin/Monitoreo/html/monitoreo_concesionarias.html
+++ b/admin/Monitoreo/html/monitoreo_concesionarias.html
@@ -3,7 +3,7 @@
 <form action="index.php" name="concesion" method="post">
             <input type="hidden" name="_module" value="$_module">
 			<input type="hidden" name="_op" value="$_op">
-            <center><h1>Monitoreo de Distribuidores</h1></center>
+            <center><h1>Monitoreo de Proyectos</h1></center>
             <table width="40%" border="0" align="center">
 			<thead>
 			<tr>
