--- a/admin/Monitoreo/html/monitoreo_concesionarias_asignacion.html
+++ b/admin/Monitoreo/html/monitoreo_concesionarias_asignacion.html
@@ -6,7 +6,7 @@
     <table width="100%" align="center" border="0">
         <tr>
                 <td align="center">
-      		<h1>Monitoreo de Distibuidores con Prospectos Sin Asignar</h1>
+      		<h1>Monitoreo de Proyectos con Prospectos Sin Asignar</h1>
       		</td>      
         </tr>
     </table>
