--- a/admin/Reportes/html/campanas_avance.html
+++ b/admin/Reportes/html/campanas_avance.html
@@ -33,7 +33,7 @@
         </script>
         <thead>
 	<tr>
-            <td colspan="2">Distribuidor</td>
+            <td colspan="2">Proyecto</td>
 	</tr>
 	</thead>
 	<tr class="row1">
