--- a/modules/Gerente/html/monitoreo_vendedor.html
+++ b/modules/Gerente/html/monitoreo_vendedor.html
@@ -57,7 +57,7 @@ $(document).ready(function()
 <input name="uid" value="$uid" type="hidden">
 
 <table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2"> <tbody><tr>
-<td colspan="1" rowspan="1"> <h1>Monitoreo de Vendedor $uname &nbsp;<a href="index.php?_module=$_module&_op=monitoreo_vendedor_reporte&uid=$uid"><img src="img/excel.gif" border="0"></a></h1>
+<td colspan="1" rowspan="1"> <h1>Monitoreo de Usuario $uname &nbsp;<a href="index.php?_module=$_module&_op=monitoreo_vendedor_reporte&uid=$uid"><img src="img/excel.gif" border="0"></a></h1>
 
 </td> </tr> <tr class="" ><td>$tabla_campanas</td>
 </tr> <tr class="" align="center"> <td>$paginacion_campanas</td>
