--- a/admin/Campanas/html/index.html
+++ b/admin/Campanas/html/index.html
@@ -7,7 +7,7 @@
     <tr>
       <td colspan="1" rowspan="1">     
       <center>
-      <h1>Ciclo de Venta</h1>
+      <h1>Ciclo de Prospecci&oacute;n</h1>
       </center>
       </td>
     </tr>
