--- a/admin/Reportes/html/status_concesionaria.html
+++ b/admin/Reportes/html/status_concesionaria.html
@@ -54,15 +54,15 @@
                         </script>
                         <thead>
                             <tr>
-                                <td colspan="2">Distribuidor</td>
+                                <td colspan="2">Proyecto</td>
                             </tr>
                         </thead>
                         <tr class="row1">
                             <td colspan="2">$select_groups</td>
                         </tr>
                         <tr class="row1">
-                            <td style="width:100px;">Origen</td>
-                            <td style="width:200px;">$select_fuentes</td>
+                            <!--<td style="width:100px;">Origen</td>
+                            <td style="width:200px;">$select_fuentes</td>-->
                         </tr>
                         <tr class="row2">
                             <td colspan="2" align="center"><input type="submit"
