--- a/modules/Gerente/html/monitoreo_vendedores.html
+++ b/modules/Gerente/html/monitoreo_vendedores.html
@@ -94,7 +94,7 @@ $(document).ready(function()
   <tbody>
     <tr>
       <td colspan="2" rowspan="1">
-      <h1>Monitoreo de Vendedores</h1>
+      <h1>Monitoreo de Usuarios</h1>
       </td>
     </tr>
     <tr class="" >
