Add soap methods

--- a/modules/Campanas/html/llamada.html
+++ b/modules/Campanas/html/llamada.html
@@ -196,7 +196,7 @@ $variable
 			<input name="campana_id" value="$campana_id" type="hidden">
 			<input name="llamada_id" value="$llamada_id" type="hidden">
 		    Ciclo:<br>$select_ciclo_de_venta_id<br>
-			<input value="Actualizar Distribuidor" name="actualizar_ciclo"  type="submit" style="width:180px;" ><br><br>
+			<input value="Actualizar Distribuidor" name="actualizar_ciclo" id="actualizar_ciclo"  type="submit" style="width:180px;" disabled="$disabled" /><br><br>
       $primer_contacto<br>
       $ultimo_contacto
 		</form>
