--- a/modules/Campanas/html/llamada.html
+++ b/modules/Campanas/html/llamada.html
@@ -83,7 +83,7 @@ $js_extra
 <table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2"><tbody><tr><td style="text-align: left; vertical-align: top;">
 $catalogo
 <br>
-$extra_objeciones
+<!--extra_objeciones-->
 </td><td class="width100" valign="top">
 
 
@@ -136,7 +136,7 @@ $buffer_modelo
 </tbody>
 </table>
 <div id="variable" style="display:none;">
-$variable
+$--variable
 </div>
 -->
 
@@ -151,7 +151,7 @@ $variable
 		<input type="hidden" name="obj_padre" value="">
 		<input type="hidden" name="obj_bak" value="">
 		<textarea readonly="readonly" class="width100" cols="10" rows="4" name="objecion">$saludo</textarea>
-		<div id="bts_objeciones" style="text-align:center;width:100%;">$objeciones</div>
+		<div id="bts_objeciones" style="text-align:center;width:100%;">$--objeciones</div>
 	</form>
 </div>-->
 
@@ -193,7 +193,7 @@ $variable
 <tr class="row2"><td>
   <table width="100%" border="0">
    <tr>
-    <td width="33%" valign="top">
+    <td width="66%" valign="top">
 		<form action="index.php" name="ciclo" method="post" onsubmit="$mayorista_func">
 			<input name="_module" value="$_module" type="hidden">
 			<input name="_op" value="$_op" type="hidden">
@@ -203,14 +203,12 @@ $variable
 		    Ciclo:<br>$select_ciclo_de_venta_id<br>
 			<input value="Actualizar Distribuidor" name="actualizar_ciclo" id="actualizar_ciclo"  type="submit" style="width:180px;" /><br><br>
       $primer_contacto<br>
-      $ultimo_contacto
+      $ultimo_contacto<br/>
+			<p>$mayoristas</p>
 		</form>
-		$forma_finalizar_contacto
+		<!--$--forma_finalizar_contacto-->
     </td>
-    <td width="33%" valign="top">
-$select_actividades
-		$mayoristas
-    </td>
+    
 	  <td width="33%" valign="top">
    <b>$titulo_planear</b> 
 <div id="evento_nuevo" style="display:block;">
