Modificar mayoristas y ciclo de distribuidores

--- a/modules/Campanas/html/llamada.html
+++ b/modules/Campanas/html/llamada.html
@@ -22,7 +22,7 @@ function enable_mayorista()
 	may = document.getElementById("mayorista_id");
 	may.disabled = false;
 }
-function show_obj(obj)
+/*function show_obj(obj)
 {
 document.objeciones.objecion.value = obj;
 }
@@ -71,7 +71,7 @@ objs.innerHTML += "<input class='button' type='button' value='" + titulo +"' "
 i++;
 }
 }
-$js_extra
+$js_extra*/
 </script></head>
 <body onload="show_obj_bt('0');startList();" leftmargin="0" topmargin="0">
 
