Rewrite cicle and change mayoristas admin

--- a/admin/Mayoristas/html/new.html
+++ b/admin/Mayoristas/html/new.html
@@ -13,26 +13,31 @@
       <div class="field" style="float:left;width:400px;margin-left:300px;background:#66CDAA; padding:5px;">
         <div style="width:150px;float:left;"><label for="razon_social">Razon Social</label></div>
         <div style="width:220px;"><input type="text" name="razon_social" id="razon_social" style="height:20px;border:solid 1px green;" /></div>
+        <div>$razon_html</div>
       </div>
       <br style="clear:both;"/>
       <div class="field" style="float:left;width:400px;margin-left:300px; padding:5px;">
         <div style="width:150px;float:left;"><label for="rfc">RFC</label></div>
         <div style="width:220px;"><input type="text" name="rfc" id="rfc" style="height:20px;border:solid 1px green;" /></div>
+        <div>$rfc_html</div>
       </div>
       <br style="clear:both;"/>
       <div class="field" style="float:left;width:400px;margin-left:300px;background:#66CDAA; padding:5px;">
         <div style="width:150px;float:left;"><label for="contacto_nombre">Nombre Contacto</label></div>
         <div style="width:220px;"><input type="text" name="contacto_nombre" id="contacto_nombre" style="height:20px;border:solid 1px green;" /></div>
+        <div>$nombre_html</div>
       </div>
       <br style="clear:both;"/>
       <div class="field" style="float:left;width:400px;margin-left:300px; padding:5px;">
         <div style="width:150px;float:left;"><label for="contacto_telefono">Telefono Contacto</label></div>
         <div style="width:220px;"><input type="text" name="contacto_telefono" id="contacto_telefono" style="height:20px;border:solid 1px green;" /></div>
+        <div>$telefono_html</div>
       </div>
       <br style="clear:both;"/>
       <div class="field" style="float:left;width:400px;margin-left:300px;background:#66CDAA; padding:5px;">
         <div style="width:150px;float:left;"><label for="contacto_email">Email Contacto</label></div>
         <div style="width:220px;"><input type="text" name="contacto_email" id="contacto_email" style="height:20px;border:solid 1px green;" /></div>
+        <div>$email_html</div>
       </div>
       <div class="field" style="float:left;width:400px;margin-left:300px;">
         <br/>
