--- a/modules/Campanas/html/actividades.html
+++ b/modules/Campanas/html/actividades.html
@@ -4,7 +4,7 @@
 <title></title>
 <meta content="">
 </head>
-<body>
+<body><br/>
 <script>
 $jsarray
 //funcion para ir de uno en uno por los tiempos de retrasos
