--- a/modules/Campanas/html/llamada.html
+++ b/modules/Campanas/html/llamada.html
@@ -102,7 +102,7 @@ $catalogo
 
 <table class="width100" border="0" cellpadding="2" cellspacing="0"> <tbody>
 <tr class="row1"><td align="right" style="width:100px;font-weight:bold;"><span style='background-color:$color_semaforo'>&nbsp;&nbsp;&nbsp;</span>&nbsp;Nombre</td><td style="width:250px;" >$nombre $apellido_paterno $apellido_materno</td><td>Mañ-Tar-Noc</td></tr>
-<tr class="row1"><td align="right" style="width:100px;font-weight:bold;"><span style='background-color:$color_semaforo'>&nbsp;&nbsp;&nbsp;</span>&nbsp;Compañia</td><td style="width:250px;" >$compania</td><td></td>
+<tr class="row1"><td align="right" style="width:100px;font-weight:bold;"><span style='background-color:$color_semaforo'>&nbsp;&nbsp;&nbsp;</span>&nbsp;Compañia</td><td style="width:250px;" >$empresa</td><td></td>
 <tr class="row2"><td align="right" style="font-weight:bold;">Tel. Casa 1</td><td>$tel_casa </td><td>$horario_preferido_casa</td></tr>
 <tr class="row1"><td align="right" style="font-weight:bold;">Tel. Móvil 1</td><td>$tel_movil </td><td>$horario_preferido_movil</td></tr>
 <tr class="row2"><td align="right" style="font-weight:bold;">Tel. Oficina 1</td><td>$tel_oficina </td><td>$horario_preferido_oficina</td></tr>
